--- a/static/style.css
+++ b/static/style.css
@@ -120,11 +120,12 @@ button{
 .preferences-top{
 
     width: 867px;
-    height: 81px;
+    height: 86px;
     float: left;
 	  border: solid 1px #2c3238;
     border-bottom: none;
-    font-size: 13px;
+    font-size: 17px;
+    font-weight: bold;
     border-radius: 6px 6px 0 0;
     position: relative;
     z-index: 1;
@@ -139,16 +140,17 @@ button{
   width: 731px;
   display: block;
   float: left;
-  padding-top: 8px;
-  height: 34px;
+  padding-top: 11px;
+  height: 32px;
   line-height: normal;
 }
 .iconApp{
   background: url(https://static.inevio.com/app/374/gear.png) no-repeat;
   width: 18px;
   height: 18px;
-  margin-left: 8px;
-  margin-right: 8px;
+  margin-left: 14px;
+  margin-right: 14px;
+  margin-top: 2px;
   float: left;
   background-size: 18px;
 }
@@ -160,10 +162,10 @@ button{
 .preferences-top nav{
 
     float: left;
-    width: 625px;
+    width: 650px;
     height: inherit;
     text-align: left;
-    margin-left: 7px;
+    margin-left: 14px;
 }
 
 .preferences-top li{
@@ -171,8 +173,8 @@ button{
     padding-bottom: 10px;
     padding-top: 15px;
     display: inline-block;
-    font-size: 13px;
-    color: #bdc4c6;
+    font-size: 17px;
+    color: #d2dce2;
     margin: 0px 11px 0px 11px;
     border-bottom: 2px solid transparent;
 
@@ -598,8 +600,9 @@ button{
 /* HDD ZONE START */
 
 .hdd button{
-  border-radius: 18px;
+  border-radius: 6px;
   padding: 0px 30px;
+  height: 40px;
 }
 
 .hdd{
@@ -607,6 +610,8 @@ button{
     width: 32px;
 	  height: 32px;
 	  border-radius: 20px;
+    margin-top: 12px;
+    margin-left: 25px;
 	  background-color: #2c3238;
 	  border: solid 2px #fff;
   }
@@ -624,13 +629,16 @@ button{
       background: url('@static/icono-hdd-titulo.png') no-repeat;
       background-size: 36px 36px;
       background-position: 0px 0px;
+      margin-top: 12px;
+      margin-left: 25px;
       height: 36px;
       border: none;
     }
     span{
-      font-size: 36px;
+      font-size: 40px;
       font-weight: bold;
-      margin-left: 10px;
+      margin-left: 11px;
+      margin-top: 10px
     }
   }
 
@@ -738,7 +746,7 @@ button{
   padding: 20px 0px;
   border-radius: 6px;
   background: rgb(44, 50, 56);
-  margin: 55px 0 0 0;
+  margin: 37px 0 0 26px;
 
   .usage-circle{
     background: url('@static/elipse.png') no-repeat;
@@ -796,6 +804,7 @@ button{
   width: 329px;
   height: 80px;
   margin-top: 40px;
+  margin-left: 12px;
   padding: 20px;
 
   .li-circle figure{
@@ -814,11 +823,15 @@ button{
   }
   .li-circle span{
     margin-left: 17px;
+    font-size: 21px;
+    font-weight: bold;
     color: white;
   }
   .paragraph{
     margin-left: 40px;
-    font-size: 12px;
+    margin-top: 10px;
+    line-height: 24px;
+    font-size: 15px;
     color: #b5bec5;
   }
 }
@@ -1865,7 +1878,7 @@ button{
   width: 314px;
   text-align: left;
   float: right;
-  margin-left: 100px;
+  margin-left: 65px;
   margin-top: 55px;
   border-radius: 6px;
   font-weight: bold;
