--- a/static/style.css
+++ b/static/style.css
@@ -2055,3 +2055,113 @@ span.preferences-card-subscribe-text{
 }
 
 /* ABOUT ZONE FINISH */
+
+/* INVITE ZONE START */
+.invite.preferences-bottom-content{
+  width: 100%;
+  height: 100%;
+}
+
+.invite .left-side{
+  float: left;
+  height: 100%;
+  width: ~'calc(60% - 20px)';
+  padding-right: 20px;
+}
+
+.invite .right-side{
+  float: left;
+  height: 100%;
+  width: 40%;
+}
+
+.invite .title{
+  float: left;
+  width: 100%;
+  font-size: 45px;
+  color: #fff;
+  font-weight: 900;
+  margin-top: 60px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+
+.invite .subtitle{
+  float: left;
+  width: 100%;
+  font-size: 17px;
+  color: #fff;
+  margin-top: 40px;
+  line-height: 27px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+
+.emails{
+  float: left;
+  font-size: 15px;
+  font-weight: bold;
+  color: #fff;
+  margin-top: 60px;
+  margin-left: 5px;
+}
+
+.mail-list{
+  float: left;
+  width: 100%;
+  max-height: 235px;
+  margin-top: 9px;
+}
+
+.mail{
+  float: left;
+  width: ~'calc(100% - 20px)';
+  height: 42px;
+  border-radius: 6px;
+  margin-bottom: 15px;
+  background-color: #2c3238;
+  font-size: 17px;
+  color: #fff;
+  padding-left: 20px;
+}
+
+.add-mail{
+  float: left;
+  width: ~'calc(100% - 10px)';
+  margin: 10px 10px 0 0;
+  .add-mail-text{
+    float: right;
+    color: #d2dce2;
+    font-size: 15px;
+    cursor: pointer;
+  }
+}
+.share-button{
+  width: 229px;
+  height: 56px;
+  border-radius: 6px;
+  background-color: #60b25e;
+  transition: all ease 0.19s;
+  position: absolute;
+  bottom: 10px;
+  right: 30px;
+
+  .share-text{
+    color: #fff;
+    font-weight: bold;
+    font-size: 19px;
+    width: 100%;
+    text-align: center;
+    float: left;
+    margin-top: 18px;
+  }
+}
+
+.share-button:hover{
+  background-color: #60b25e;
+}
+
+.share-button:active{
+  background-color: #60b25e;
+}
+/* INVITE ZONE END */
