--- a/static/style.css
+++ b/static/style.css
@@ -201,6 +201,7 @@ button{
   transition: all 0.2s ease;
 }
 
+
 .preferences-top nav{
 
     float: left;
@@ -3905,9 +3906,10 @@ span.preferences-card-subscribe-text{
 
 /* INVITE ZONE START */
 .invite.preferences-bottom-content{
-  width: 100%;
-  height: 100%;
+  display: none;
+  opacity: 0;
 }
+
 
 .invite .left-side{
   float: left;
