--- a/static/style.css
+++ b/static/style.css
@@ -2817,12 +2817,13 @@ button{
 
     font-size: 16px;
     font-weight: bold;
-    width: 100%;
+    width: 66px;
     text-align: center;
     color: #FFFFFF;
     position: absolute;
     top: 83px;
-    left: 0px;
+    left: -10px;
+    right: 0px;
 
 }
 
@@ -2831,11 +2832,11 @@ button{
 
     font-size: 14px;
     color: #FFF;
-    width: 104px;
+    width: 115px;
     text-align: center;
     position: absolute;
     top: 107px;
-    left: -28px;
+    left: -33px;
 
 }
 
